--- a/dc-mysql.yaml
+++ b/dc-mysql.yaml
@@ -9,11 +9,15 @@ spec:
   selector:
     app: db
   strategy:
-    activeDeadlineSeconds: 21600
-    recreateParams:
+    activeDeadlineSeconds: 3600
+    rollingParams:
+      intervalSeconds: 1
+      maxSurge: 25%
+      maxUnavailable: 25%
       timeoutSeconds: 600
+      updatePeriodSeconds: 1
     resources: {}
-    type: Recreate
+    type: Rolling
   template:
     metadata:
       name: db
@@ -60,7 +64,7 @@ spec:
       volumes:
         - name: pvc-volume
           persistentVolumeClaim:
-            claimName: pvc
+            claimName: pvc-claim
   test: false
   triggers:
     - imageChangeParams:
