--- a/pvc.yaml
+++ b/pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: claim1
+  name: pvc-claim
 spec:
  accessModes:
-  - ReadWriteMany
+  - ReadWriteOnce
  resources:
   requests:
    storage: 1Gi
